--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3 text-bg-dark border-dark">
-                <h4 class="my-0 fw-normal">JEE mains</h4>
+                <h4 class="my-0 fw-normal">JEE Mains</h4>
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">₹50,000<small class="text-body-secondary fw-light">/Year</small></h1>
