--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body class="pb-0">
-  <header class="p-3 gradient-background">
+  <!-- Title -->
+  <section id="title" class="gradient-background">
+    <header class="p-3">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -36,8 +38,6 @@
       </div>
     </div>
   </header>
-  <!-- Title -->
-  <section id="title" class="gradient-background">
     <div class="container col-xxl-8 px-4 pt-5 ">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
         <div class="col-10 col-sm-8 col-lg-6">
