--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="./images/study.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200" loading="lazy">
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6" style="padding-bottom: 15px;">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Get the best course for JEE/NEET exam here.</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <button type="button" class="btn btn-light btn-lg px-4 me-md-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
